# FastAPI-Margadarshak

./: main.py  model.pkl  pyproject.toml  railway.toml  render.yaml  requirements.txt  test_gemini.py  train_and_save_model.py
